// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxIcon Should render a check icon if isChecked is set to true 1`] = `
.c1.kirk-icon-wrapper {
  display: inline-block;
  position: relative;
}

.c1.kirk-icon-shadowed {
  border-radius: 50%;
  box-shadow: 0 0 2px rgba(0,0,0,.3);
}

.c1 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c0 {
  background-color: #00AFF5;
  border-radius: 100%;
}

.c0.absolute {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

.c0.validate path {
  stroke-dasharray: 24;
  stroke-dashoffset: 24;
  stroke-linecap: round;
  -webkit-animation: dash 0.5s cubic-bezier(0.65,0,0.45,1) forwards;
  animation: dash 0.5s cubic-bezier(0.65,0,0.45,1) forwards;
}

<svg
  aria-hidden={true}
  className="kirk-icon kirk-icon-check c0 c1"
  fill="#FFF"
  height={24}
  viewBox="0 0 24 24"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  
  <path
    d="M6.5 12.5l4 4 8-8"
    fill="none"
    stroke="#FFF"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeMiterlimit="10"
    strokeWidth="1"
  />
</svg>
`;

exports[`CheckboxIcon Should render a loader if isLoading and isChecked are set to true 1`] = `
.c2.kirk-icon-wrapper {
  display: inline-block;
  position: relative;
}

.c2.kirk-icon-shadowed {
  border-radius: 50%;
  box-shadow: 0 0 2px rgba(0,0,0,.3);
}

.c2 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c1.spinning {
  -webkit-animation: cqjtzU 1.4s linear infinite;
  animation: cqjtzU 1.4s linear infinite;
}

.c1 circle {
  stroke-width: 6;
  stroke-linecap: round;
}

.c1.spinning circle {
  stroke-dasharray: 187;
  stroke-dashoffset: 0;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: hqYbNG 1.4s ease-in-out infinite;
  animation: hqYbNG 1.4s ease-in-out infinite;
}

.c1.thin circle {
  stroke-width: 3;
}

.c1.absolute {
  position: absolute;
}

.c1 circle.inner {
  stroke-width: 0;
}

.c0.kirk-loader--inline {
  display: inline-block;
}

.c0.kirk-loader--fullScreen {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  background-color: rgba(255,255,255,0.85);
  height: 100vh;
  width: 100vw;
  z-index: 4;
}

.c0.kirk-loader--block {
  display: block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px 0;
}

.c0 .kirk-loader--done {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #5DD167;
  color: #FFF;
  border-radius: 50%;
}

<div
  className="c0 kirk-loader--inline"
>
  <div
    className=""
    style={
      Object {
        "height": "24px",
        "width": "24px",
      }
    }
  >
    <svg
      aria-hidden={true}
      className="kirk-icon kirk-icon-circle spinning c1 c2"
      fill="#5DD167"
      height={24}
      viewBox="0 0 66 66"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <circle
        cx="33"
        cy="33"
        fill="none"
        r="30"
        stroke="#5DD167"
      />
    </svg>
  </div>
</div>
`;

exports[`CheckboxIcon Should render a loader if isLoading is set to true 1`] = `
.c2.kirk-icon-wrapper {
  display: inline-block;
  position: relative;
}

.c2.kirk-icon-shadowed {
  border-radius: 50%;
  box-shadow: 0 0 2px rgba(0,0,0,.3);
}

.c2 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c1.spinning {
  -webkit-animation: cqjtzU 1.4s linear infinite;
  animation: cqjtzU 1.4s linear infinite;
}

.c1 circle {
  stroke-width: 6;
  stroke-linecap: round;
}

.c1.spinning circle {
  stroke-dasharray: 187;
  stroke-dashoffset: 0;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: hqYbNG 1.4s ease-in-out infinite;
  animation: hqYbNG 1.4s ease-in-out infinite;
}

.c1.thin circle {
  stroke-width: 3;
}

.c1.absolute {
  position: absolute;
}

.c1 circle.inner {
  stroke-width: 0;
}

.c0.kirk-loader--inline {
  display: inline-block;
}

.c0.kirk-loader--fullScreen {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  background-color: rgba(255,255,255,0.85);
  height: 100vh;
  width: 100vw;
  z-index: 4;
}

.c0.kirk-loader--block {
  display: block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px 0;
}

.c0 .kirk-loader--done {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #5DD167;
  color: #FFF;
  border-radius: 50%;
}

<div
  className="c0 kirk-loader--inline"
>
  <div
    className=""
    style={
      Object {
        "height": "24px",
        "width": "24px",
      }
    }
  >
    <svg
      aria-hidden={true}
      className="kirk-icon kirk-icon-circle spinning c1 c2"
      fill="#5DD167"
      height={24}
      viewBox="0 0 66 66"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <circle
        cx="33"
        cy="33"
        fill="none"
        r="30"
        stroke="#5DD167"
      />
    </svg>
  </div>
</div>
`;

exports[`CheckboxIcon Should render an empty circle by default 1`] = `
.c1.kirk-icon-wrapper {
  display: inline-block;
  position: relative;
}

.c1.kirk-icon-shadowed {
  border-radius: 50%;
  box-shadow: 0 0 2px rgba(0,0,0,.3);
}

.c1 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c0.spinning {
  -webkit-animation: cqjtzU 1.4s linear infinite;
  animation: cqjtzU 1.4s linear infinite;
}

.c0 circle {
  stroke-width: 6;
  stroke-linecap: round;
}

.c0.spinning circle {
  stroke-dasharray: 187;
  stroke-dashoffset: 0;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: hqYbNG 1.4s ease-in-out infinite;
  animation: hqYbNG 1.4s ease-in-out infinite;
}

.c0.thin circle {
  stroke-width: 3;
}

.c0.absolute {
  position: absolute;
}

.c0 circle.inner {
  stroke-width: 0;
}

<svg
  aria-hidden={true}
  className="kirk-icon kirk-icon-circle c0 c1"
  fill="#00AFF5"
  height={24}
  viewBox="0 0 66 66"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  
  <circle
    cx="33"
    cy="33"
    fill="none"
    r="30"
    stroke="#00AFF5"
  />
</svg>
`;
